@@ -1,3 +1,6 @@
+3 August 2011: Wouter
+	- silence 'Broken pipe' messages in log (visible with verbosity 2).
+
 2 August 2011: Wouter
 	- fix compile on Ubuntu 11.04 systems, detects cc system header issue.
 
